# learn-rust

./: .gitignore  Cargo.toml  README.ko.md  README.md
lectures/lesson-01-basics/section-01-variables/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-02-functions/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-03-control-flow/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-04-ownership-borrowing/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-05-data-types-pattern-matching/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-06-methods-traits-generics/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-07-collections-iterators/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-08-error-handling/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-01-basics/section-09-modules-workspaces/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-02-intermediate/section-01-smart-pointers/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-02-intermediate/section-02-concurrency/: Cargo.toml  answer.rs  section.ko.md  section.md
lectures/lesson-02-intermediate/section-03-iterators-advanced/: Cargo.toml  (+3 more)
lesson_plan/: overview.md  section-template.md
scripts/: grade.ps1  grade.sh  reset_libs.ps1  reset_libs.sh
tools/grader_ui/: Cargo.toml
tools/grader_ui/src/: main.rs
(+36 files in other folders)
