[package]
name = "grader_ui"
version = "0.1.0"
edition = "2021"

# This tool is intentionally kept OUT of the workspace so it doesn't slow
# down `cargo test --workspace`. Run it directly from this folder or via
# --manifest-path.

[dependencies]
eframe = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

